<resources>
    <string name="app_name">School Cashless</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Login Activity -->
    <string name="login_text_username">Email</string>
    <string name="login_text_name">Name</string>
    <string name="login_text_password">Password</string>
    <string name="login_text_confirmpassword">Confirm password</string>
    <string name="login_btn_login">Login</string>
    <string name="login_btn_forgot">Forgot Password?</string>
    <string name="login_btn_register">register</string>

    <!-- Savings Fragment -->
    <string name="savings_view_title">Money spent</string>
    <string name="savings_view_money_left">Balance</string>
    <string name="savings_list_heading">Recent transactions</string>

    <!-- Payments Fragment -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_savings">PcktMny</string>

    <!-- Errors -->
    <string name="error_field_required">Field is required!</string>
    <string name="error_field_password_short">Password is too short!</string>
    <string name="error_field_password_mismatch">Passwords do not match!</string>
    <string name="error_misbehaving">Server responded with something bad</string>
    <string name="error_connection">Unable to connect</string>
    <string name="error_authenticate">Unable to authenticate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
