<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.danie.schoolcashless.RegisterActivity">

    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rotateloading"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="?android:attr/colorForeground"
        android:visibility="gone" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_text_name"
                    android:lines="1"
                    android:inputType="textPersonName" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_text_username"
                    android:lines="1"
                    android:inputType="textEmailAddress"
                    android:theme="@style/Widget.AppCompat.EditText" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_text_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:theme="@style/Widget.AppCompat.EditText" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_text_confirmpassword"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:theme="@style/Widget.AppCompat.EditText" />

            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true">

            <Button
                android:id="@+id/register_btn_register"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_btn_register" />

        </android.support.v7.widget.ButtonBarLayout>
    </LinearLayout>

</RelativeLayout>
