<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/parent"
    tools:context="com.example.danie.schoolcashless.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_form"
        android:layout_alignRight="@+id/login_form"
        android:layout_above="@+id/login_form"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Welcome to Pckt"
            android:id="@+id/textView2"
            android:layout_above="@+id/login_form"
            android:layout_alignLeft="@+id/login_form" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_text_username"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:theme="@style/Widget.AppCompat.EditText" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_text_password"
                android:inputType="textPassword"
                android:lines="1"
                android:theme="@style/Widget.AppCompat.EditText" />

            <TextView
                android:id="@+id/login_btn_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/login_btn_forgot"
                android:textSize="14sp"
                style="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>

        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <Button
                android:id="@+id/login_btn_register"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_btn_register" />

            <Button
                android:id="@+id/login_btn_login"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/login_btn_login" />
        </android.support.v7.widget.ButtonBarLayout>
    </LinearLayout>

    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rotateloading"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="?android:attr/colorForeground"
        android:visibility="gone" />

</RelativeLayout>
